--- a/react/package.json
+++ b/react/package.json
@@ -28,6 +28,7 @@
     },
     "homepage": "https://github.com/1stdibs/front-end-quiz#readme",
     "dependencies": {
+        "body-parser": "^1.18.2",
         "express": "^4.16.2",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
