--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "1stdibs-front-end-quiz",
+    "name": "1stdibs",
     "version": "1.0.0",
-    "description": "1stdibs Front-end quiz based on React, Flux, Node",
+    "description": "bla",
     "main": "src/index.js",
     "scripts": {
         "start": "react-scripts start",
