--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
-        "dev": "nodemon --watch server --verbose server/index.js"
+        "dev": "nodemon --watch server --verbose server/index.js",
+        "heroku-postbuild": "cd src && npm install --only=dev && npm install && npm run build"
+
     },
     "repository": {
         "type": "git",
