--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
         "dev": "nodemon --watch server --verbose server/index.js",
-        "heroku-postbuild": "cd front-end-quiz && npm install --only=dev && npm install && npm run build"
+        "heroku-postbuild": "npm install --only=dev && npm install && npm run build"
 
     },
     "repository": {
