--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
         "dev": "nodemon --watch server --verbose server/index.js"
-
     },
     "repository": {
         "type": "git",
@@ -30,6 +29,7 @@
     "homepage": "https://github.com/1stdibs/front-end-quiz#readme",
     "dependencies": {
         "body-parser": "^1.18.2",
+        "cors": "^2.8.4",
         "express": "^4.16.2",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
